Uses firebase hosting instead of Heroku for static assets

--- a/web/index.html
+++ b/web/index.html
@@ -38,7 +38,7 @@
     </script>
     <script src="./client.js"></script>
 
-    <h1>Firebase Auth Test</h1>
+    <h1>Simple Chat Application</h1>
     <div id='firebaseui-auth-container'></div>
     <div id="loader">Loading...</div>
     <b><div id="success"></div></b>
