Implements Firebase Store

--- a/web/index.html
+++ b/web/index.html
@@ -40,8 +40,12 @@
 
     <h1>Simple Chat Application</h1>
     <div id='firebaseui-auth-container'></div>
-    <div id="loader">Loading...</div>
-    <b><div id="success"></div></b>
+	
+	<div id='messages-container'>
+		<div class='message system'>Welcome to Leonardo Serrano's CSE 405 project!</div>
+		<div id='loading-msg' class='message system'>Loading messages...</div>
+	</div>
+	<div id='input-box' contenteditable="true"></div><div id='input-button'>SEND</div>
 
 </body>
 </html>
