Did away with the NodeJS backend. Mostly unnecessary. Now uses Firebase Realtime Database!

--- a/web/index.html
+++ b/web/index.html
@@ -13,7 +13,7 @@
 
     <!-- Add Firebase products that you want to use -->
     <script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-firestore.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-database.js"></script>
 
     <script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script>
     <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css" />
@@ -43,7 +43,6 @@
 	
 	<div id='messages-container'>
 		<div class='message system'>Welcome to Leonardo Serrano's CSE 405 project!</div>
-		<div id='loading-msg' class='message system'>Loading messages...</div>
 	</div>
 	<div id='input-box' contenteditable="true"></div><div id='input-button'>SEND</div>
 
